osc_parser.output
Grammar

    0 $accept: bundle $end

    1 bundle: messages

    2 subbundle: '{' messages '}'

    3 messages: message
    4         | messages ',' message

    5 message: OSCADDRESS
    6        | OSCADDRESS ':' datum
    7        | OSCADDRESS ':' list

    8 data: datum
    9     | data ',' datum

   10 datum: OSCADDRESS
   11      | OSCVALUE
   12      | subbundle

   13 list: '[' data ']'


Terminals, with rules where they appear

$end (0) 0
',' (44) 4 9
':' (58) 6 7
'[' (91) 13
']' (93) 13
'{' (123) 2
'}' (125) 2
error (256)
OSCADDRESS (258) 5 6 7 10
OSCVALUE (259) 11


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
bundle (12)
    on left: 1, on right: 0
subbundle (13)
    on left: 2, on right: 12
messages (14)
    on left: 3 4, on right: 1 2 4
message (15)
    on left: 5 6 7, on right: 3 4
data (16)
    on left: 8 9, on right: 9 13
datum (17)
    on left: 10 11 12, on right: 6 8 9
list (18)
    on left: 13, on right: 7


State 0

    0 $accept: . bundle $end
    1 bundle: . messages
    3 messages: . message
    4         | . messages ',' message
    5 message: . OSCADDRESS
    6        | . OSCADDRESS ':' datum
    7        | . OSCADDRESS ':' list

    OSCADDRESS  shift, and go to state 1

    bundle    go to state 2
    messages  go to state 3
    message   go to state 4


State 1

    5 message: OSCADDRESS .
    6        | OSCADDRESS . ':' datum
    7        | OSCADDRESS . ':' list

    ':'  shift, and go to state 5

    $default  reduce using rule 5 (message)


State 2

    0 $accept: bundle . $end

    $end  shift, and go to state 6


State 3

    1 bundle: messages .
    4 messages: messages . ',' message

    ','  shift, and go to state 7

    $default  reduce using rule 1 (bundle)


State 4

    3 messages: message .

    $default  reduce using rule 3 (messages)


State 5

    2 subbundle: . '{' messages '}'
    6 message: OSCADDRESS ':' . datum
    7        | OSCADDRESS ':' . list
   10 datum: . OSCADDRESS
   11      | . OSCVALUE
   12      | . subbundle
   13 list: . '[' data ']'

    OSCADDRESS  shift, and go to state 8
    OSCVALUE    shift, and go to state 9
    '{'         shift, and go to state 10
    '['         shift, and go to state 11

    subbundle  go to state 12
    datum      go to state 13
    list       go to state 14


State 6

    0 $accept: bundle $end .

    $default  accept


State 7

    4 messages: messages ',' . message
    5 message: . OSCADDRESS
    6        | . OSCADDRESS ':' datum
    7        | . OSCADDRESS ':' list

    OSCADDRESS  shift, and go to state 1

    message  go to state 15


State 8

   10 datum: OSCADDRESS .

    $default  reduce using rule 10 (datum)


State 9

   11 datum: OSCVALUE .

    $default  reduce using rule 11 (datum)


State 10

    2 subbundle: '{' . messages '}'
    3 messages: . message
    4         | . messages ',' message
    5 message: . OSCADDRESS
    6        | . OSCADDRESS ':' datum
    7        | . OSCADDRESS ':' list

    OSCADDRESS  shift, and go to state 1

    messages  go to state 16
    message   go to state 4


State 11

    2 subbundle: . '{' messages '}'
    8 data: . datum
    9     | . data ',' datum
   10 datum: . OSCADDRESS
   11      | . OSCVALUE
   12      | . subbundle
   13 list: '[' . data ']'

    OSCADDRESS  shift, and go to state 8
    OSCVALUE    shift, and go to state 9
    '{'         shift, and go to state 10

    subbundle  go to state 12
    data       go to state 17
    datum      go to state 18


State 12

   12 datum: subbundle .

    $default  reduce using rule 12 (datum)


State 13

    6 message: OSCADDRESS ':' datum .

    $default  reduce using rule 6 (message)


State 14

    7 message: OSCADDRESS ':' list .

    $default  reduce using rule 7 (message)


State 15

    4 messages: messages ',' message .

    $default  reduce using rule 4 (messages)


State 16

    2 subbundle: '{' messages . '}'
    4 messages: messages . ',' message

    '}'  shift, and go to state 19
    ','  shift, and go to state 7


State 17

    9 data: data . ',' datum
   13 list: '[' data . ']'

    ','  shift, and go to state 20
    ']'  shift, and go to state 21


State 18

    8 data: datum .

    $default  reduce using rule 8 (data)


State 19

    2 subbundle: '{' messages '}' .

    $default  reduce using rule 2 (subbundle)


State 20

    2 subbundle: . '{' messages '}'
    9 data: data ',' . datum
   10 datum: . OSCADDRESS
   11      | . OSCVALUE
   12      | . subbundle

    OSCADDRESS  shift, and go to state 8
    OSCVALUE    shift, and go to state 9
    '{'         shift, and go to state 10

    subbundle  go to state 12
    datum      go to state 22


State 21

   13 list: '[' data ']' .

    $default  reduce using rule 13 (list)


State 22

    9 data: data ',' datum .

    $default  reduce using rule 9 (data)
